Исправляет баги клиентского баг-листа

--- a/source/improvement-list_var2-new.html
+++ b/source/improvement-list_var2-new.html
@@ -137,11 +137,11 @@
             <a href="#" class="proposal-list__title">Рыбным текстом называется
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
-              <div class="form-checkbox form-checkbox--round js-projects__item-link">
+              <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
                 <input type="checkbox" name="checkbox" id="checkbox-1" value="checkbox-1">
                 <label for="checkbox-1"></label>
               </div>
-              <div class="proposal__like-wrapper js-projects__item-link">
+              <!-- <div class="proposal__like-wrapper js-projects__item-link">
                 <span>1024</span>
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
@@ -155,7 +155,7 @@
                     d="M4.79997 8.61389C4.79561 8.6166 4.79128 8.6193 4.78697 8.62199C4.71997 7.718 3.97098 7 3.04998 7H1.74999C0.784995 7 0 7.785 0 8.74999V22.2499C0 23.2149 0.784995 23.9999 1.74999 23.9999H3.04998C4.01454 23.9999 4.79926 23.2156 4.79997 22.2512C4.79997 22.2508 4.79997 22.2503 4.79997 22.2499V21.8839L4.79997 8.61389Z"
                     fill="inherit"></path>
                 </svg>
-              </div>
+              </div> -->
             </div>
           </li>
           <li class="proposal-list__item">
@@ -180,10 +180,10 @@
             <a href="#" class="proposal-list__title">Рыбным текстом называется
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
-              <div class="form-checkbox form-checkbox--round js-projects__item-link">
+              <!-- <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
                 <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
                 <label for="checkbox-2"></label>
-              </div>
+              </div> -->
               <div class="proposal__like-wrapper js-projects__item-link">
                 <span>1024</span>
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -223,11 +223,11 @@
             <a href="#" class="proposal-list__title">Рыбным текстом называется
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
-              <div class="form-checkbox form-checkbox--round js-projects__item-link">
-                <input type="checkbox" name="checkbox" id="checkbox-3" value="checkbox-3">
+              <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
+                <input type="checkbox" name="checkbox" id="checkbox-3" value="checkbox-3" checked>
                 <label for="checkbox-3"></label>
               </div>
-              <div class="proposal__like-wrapper js-projects__item-link">
+              <!-- <div class="proposal__like-wrapper js-projects__item-link">
                 <span>1024</span>
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
@@ -241,7 +241,7 @@
                     d="M4.79997 8.61389C4.79561 8.6166 4.79128 8.6193 4.78697 8.62199C4.71997 7.718 3.97098 7 3.04998 7H1.74999C0.784995 7 0 7.785 0 8.74999V22.2499C0 23.2149 0.784995 23.9999 1.74999 23.9999H3.04998C4.01454 23.9999 4.79926 23.2156 4.79997 22.2512C4.79997 22.2508 4.79997 22.2503 4.79997 22.2499V21.8839L4.79997 8.61389Z"
                     fill="inherit"></path>
                 </svg>
-              </div>
+              </div> -->
             </div>
           </li>
           <li class="proposal-list__item">
@@ -266,11 +266,11 @@
             <a href="#" class="proposal-list__title">Рыбным текстом называется
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
-              <div class="form-checkbox form-checkbox--round js-projects__item-link">
+              <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
                 <input type="checkbox" name="checkbox" id="checkbox-4" value="checkbox-4">
                 <label for="checkbox-4"></label>
               </div>
-              <div class="proposal__like-wrapper js-projects__item-link">
+              <!-- <div class="proposal__like-wrapper js-projects__item-link">
                 <span>1024</span>
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
@@ -284,7 +284,7 @@
                     d="M4.79997 8.61389C4.79561 8.6166 4.79128 8.6193 4.78697 8.62199C4.71997 7.718 3.97098 7 3.04998 7H1.74999C0.784995 7 0 7.785 0 8.74999V22.2499C0 23.2149 0.784995 23.9999 1.74999 23.9999H3.04998C4.01454 23.9999 4.79926 23.2156 4.79997 22.2512C4.79997 22.2508 4.79997 22.2503 4.79997 22.2499V21.8839L4.79997 8.61389Z"
                     fill="inherit"></path>
                 </svg>
-              </div>
+              </div> -->
             </div>
           </li>
           <li class="proposal-list__item">
@@ -309,11 +309,11 @@
             <a href="#" class="proposal-list__title">Рыбным текстом называется
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
-              <div class="form-checkbox form-checkbox--round js-projects__item-link">
+              <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
                 <input type="checkbox" name="checkbox" id="checkbox-5" value="checkbox-5">
                 <label for="checkbox-5"></label>
               </div>
-              <div class="proposal__like-wrapper js-projects__item-link">
+              <!-- <div class="proposal__like-wrapper js-projects__item-link">
                 <span>1024</span>
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
@@ -327,7 +327,7 @@
                     d="M4.79997 8.61389C4.79561 8.6166 4.79128 8.6193 4.78697 8.62199C4.71997 7.718 3.97098 7 3.04998 7H1.74999C0.784995 7 0 7.785 0 8.74999V22.2499C0 23.2149 0.784995 23.9999 1.74999 23.9999H3.04998C4.01454 23.9999 4.79926 23.2156 4.79997 22.2512C4.79997 22.2508 4.79997 22.2503 4.79997 22.2499V21.8839L4.79997 8.61389Z"
                     fill="inherit"></path>
                 </svg>
-              </div>
+              </div> -->
             </div>
           </li>
         </ul>
