--- a/source/improvement-list_var3-new.html
+++ b/source/improvement-list_var3-new.html
@@ -137,7 +137,7 @@
             <a href="#" class="proposal-list__title">Рыбным текстом называется
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
-              <div class="form-checkbox form-checkbox--round js-projects__item-link">
+              <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
                 <input type="checkbox" name="checkbox" id="checkbox-1" value="checkbox-1">
                 <label for="checkbox-1"></label>
               </div>
@@ -180,7 +180,7 @@
             <a href="#" class="proposal-list__title">Рыбным текстом называется
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
-              <div class="form-checkbox form-checkbox--round js-projects__item-link">
+              <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
                 <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
                 <label for="checkbox-2"></label>
               </div>
@@ -223,7 +223,7 @@
             <a href="#" class="proposal-list__title">Рыбным текстом называется
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
-              <div class="form-checkbox form-checkbox--round js-projects__item-link">
+              <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
                 <input type="checkbox" name="checkbox" id="checkbox-3" value="checkbox-3">
                 <label for="checkbox-3"></label>
               </div>
@@ -266,7 +266,7 @@
             <a href="#" class="proposal-list__title">Рыбным текстом называется
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
-              <div class="form-checkbox form-checkbox--round js-projects__item-link">
+              <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
                 <input type="checkbox" name="checkbox" id="checkbox-4" value="checkbox-4">
                 <label for="checkbox-4"></label>
               </div>
@@ -309,7 +309,7 @@
             <a href="#" class="proposal-list__title">Рыбным текстом называется
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
-              <div class="form-checkbox form-checkbox--round js-projects__item-link">
+              <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
                 <input type="checkbox" name="checkbox" id="checkbox-5" value="checkbox-5">
                 <label for="checkbox-5"></label>
               </div>
