Устраняет остальные баги по клиентскому баг-листу

--- a/source/proposal-6-7_var2-new.html
+++ b/source/proposal-6-7_var2-new.html
@@ -117,7 +117,7 @@
                     aria-label="описание картинки" data-index="0">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img"
-                        src="img/img-project/1.jpg" alt="описание картинки">
+                        src="img/img-project/project-img-1@2x.png" alt="описание картинки">
                       <figcaption class="gallery__item-text"></figcaption>
                     </figure>
                   </a>
@@ -129,7 +129,7 @@
                     aria-label="описание картинки" data-index="1">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img"
-                        src="img/img-project/2.jpg" alt="описание картинки">
+                        src="img/img-project/project-img-2@2x.png" alt="описание картинки">
                       <figcaption class="gallery__item-text"></figcaption>
                     </figure>
                   </a>
@@ -140,7 +140,7 @@
                     aria-label="описание картинки" data-index="2">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img"
-                        src="img/img-project/1.jpg" alt="описание картинки">
+                        src="img/img-project/project-img-3@2x.png" alt="описание картинки">
                       <figcaption class="gallery__item-text"></figcaption>
                     </figure>
                   </a>
@@ -151,7 +151,7 @@
                     aria-label="описание картинки" data-index="3">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img"
-                        src="img/img-project/2.jpg" alt="описание картинки">
+                        src="img/img-project/project-img-4@2x.png" alt="описание картинки">
                       <figcaption class="gallery__item-text"></figcaption>
                     </figure>
                   </a>
@@ -162,7 +162,7 @@
                     aria-label="описание картинки" data-index="4">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img"
-                        src="img/img-project/1.jpg" alt="описание картинки">
+                        src="img/img-project/project-img-5@2x.png" alt="описание картинки">
                       <figcaption class="gallery__item-text"></figcaption>
                     </figure>
                   </a>
