--- a/source/proposal-6-7_var3-new.html
+++ b/source/proposal-6-7_var3-new.html
@@ -129,7 +129,7 @@
                     aria-label="описание картинки" data-index="0">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img"
-                        src="img/img-project/1.jpg" alt="описание картинки">
+                        src="img/img-project/project-img-1@2x.png" alt="описание картинки">
                       <figcaption class="gallery__item-text"></figcaption>
                     </figure>
                   </a>
@@ -141,7 +141,7 @@
                     aria-label="описание картинки" data-index="1">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img"
-                        src="img/img-project/2.jpg" alt="описание картинки">
+                        src="img/img-project/project-img-2@2x.png" alt="описание картинки">
                       <figcaption class="gallery__item-text"></figcaption>
                     </figure>
                   </a>
@@ -152,7 +152,7 @@
                     aria-label="описание картинки" data-index="2">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img"
-                        src="img/img-project/1.jpg" alt="описание картинки">
+                        src="img/img-project/project-img-3@2x.png" alt="описание картинки">
                       <figcaption class="gallery__item-text"></figcaption>
                     </figure>
                   </a>
@@ -163,7 +163,7 @@
                     aria-label="описание картинки" data-index="3">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img"
-                        src="img/img-project/2.jpg" alt="описание картинки">
+                        src="img/img-project/project-img-4@2x.png" alt="описание картинки">
                       <figcaption class="gallery__item-text"></figcaption>
                     </figure>
                   </a>
@@ -174,7 +174,7 @@
                     aria-label="описание картинки" data-index="4">
                     <figure class="gallery__item">
                       <img width="135" height="135" class="gallery__item-img"
-                        src="img/img-project/1.jpg" alt="описание картинки">
+                        src="img/img-project/project-img-5@2x.png" alt="описание картинки">
                       <figcaption class="gallery__item-text"></figcaption>
                     </figure>
                   </a>
@@ -1051,6 +1051,27 @@
           <a class="button button--light-blue" href="#">
             <span>к списку предложений</span>
           </a>
+        </div>
+        <include src="source/components/buttons-wrapper.html"></include>
+        <div class="confirmation-popup" data-modal="remove">
+          <div class="confirmation-popup__body">
+            <button type="button" class="confirmation-popup__close-btn" aria-label="Отмена"></button>
+            <p>После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя</p>
+            <div class="confirmation-popup__buttons-wrap">
+              <button type="button" class="confirmation-popup__back-btn button button--white">Вернуться</button>
+              <button type="submit" class="confirmation-popup__submit-btn button button--blue">Отправить</button>
+            </div>
+          </div>
+        </div>
+        <div class="confirmation-popup" data-modal="confirm">
+          <div class="confirmation-popup__body">
+            <button type="button" class="confirmation-popup__close-btn" aria-label="Отмена"></button>
+            <p>После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя</p>
+            <div class="confirmation-popup__buttons-wrap">
+              <button type="button" class="confirmation-popup__back-btn button button--white">Вернуться</button>
+              <button type="submit" class="confirmation-popup__submit-btn button button--blue">Отправить</button>
+            </div>
+          </div>
         </div>
       </section>
     </div>
