--- a/source/improvement-list_var2-new.html
+++ b/source/improvement-list_var2-new.html
@@ -395,7 +395,7 @@
                 </p>
               </div>
               <div class="proposal__project-img">
-                <a class="proposal__project-link gallery__item-link" href="img/img-project/project-img-1@2x.png" target="_blank"
+                <a class="proposal__project-link gallery__item-link js-image-popup-link" href="img/img-project/project-img-1@2x.png" target="_blank"
                   aria-label="описание картинки" data-index="0">
                   <figure class="proposal__project-figure gallery__item">
                     <img width="230" height="140" class="gallery__item-img" src="img/img-project/project-img-1@2x.png"
@@ -551,7 +551,7 @@
                 </p>
               </div>
               <div class="proposal__project-img">
-                <a class="proposal__project-link gallery__item-link" href="img/img-project/project-img-2@2x.png" target="_blank"
+                <a class="proposal__project-link gallery__item-link js-image-popup-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                   aria-label="описание картинки" data-index="0">
                   <figure class="proposal__project-figure gallery__item">
                     <img width="230" height="140" class="gallery__item-img" src="img/img-project/project-img-2@2x.png"
@@ -707,7 +707,7 @@
                 </p>
               </div>
               <div class="proposal__project-img">
-                <a class="proposal__project-link gallery__item-link" href="img/img-project/project-img-3@2x.png" target="_blank"
+                <a class="proposal__project-link gallery__item-link js-image-popup-link" href="img/img-project/project-img-3@2x.png" target="_blank"
                   aria-label="описание картинки" data-index="0">
                   <figure class="proposal__project-figure gallery__item">
                     <img width="230" height="140" class="gallery__item-img" src="img/img-project/project-img-3@2x.png"
@@ -845,6 +845,24 @@
                 </svg>
             </button>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="gallery-popup gallery-popup--single js-image-popup popup js-popup">
+    <div class="popup__container">
+      <div class="popup__overlay js-popup__overlay"></div>
+      <div class="gallery-popup__content popup__content">
+        <div class="popup__bar popup__bar--top">
+          <button class="popup__close-btn js-popup__close-btn" type="button">
+            <span class="visually-hidden">Закрыть</span>
+            <svg width="16" height="16">
+              <use xlink:href="img/sprite.svg#icon-cross"></use>
+            </svg>
+          </button>
+        </div>
+        <div class="gallery-popup__frame js-image-popup__frame">
         </div>
       </div>
     </div>
