--- a/source/proposal-6-7_var3-new.html
+++ b/source/proposal-6-7_var3-new.html
@@ -88,7 +88,7 @@
                   fill="inherit" />
               </svg> -->
             </div>
-            <div>
+            <div class="project-vote__wrapper">
               <p class="project-vote__choose-project">Выберите вариант дизайн-проекта для&nbsp;благоустройства территорий</p>
               <a href="#proposal-projects" class="project-vote__choose-btn button button--blue">ПРОГОЛОСОВАТЬ</a>
               <p class="project-vote__marked">
@@ -225,7 +225,7 @@
                 </p>
               </div>
               <div class="proposal__project-img">
-                <a class="proposal__project-link gallery__item-link" href="img/img-project/project-img-1@2x.png" target="_blank"
+                <a class="proposal__project-link gallery__item-link js-image-popup-link" href="img/img-project/project-img-1@2x.png" target="_blank"
                   aria-label="описание картинки" data-index="0">
                   <figure class="proposal__project-figure gallery__item">
                     <img width="230" height="140" class="gallery__item-img" src="img/img-project/project-img-1@2x.png"
@@ -381,7 +381,7 @@
                 </p>
               </div>
               <div class="proposal__project-img">
-                <a class="proposal__project-link gallery__item-link" href="img/img-project/project-img-2@2x.png" target="_blank"
+                <a class="proposal__project-link gallery__item-link js-image-popup-link" href="img/img-project/project-img-2@2x.png" target="_blank"
                   aria-label="описание картинки" data-index="0">
                   <figure class="proposal__project-figure gallery__item">
                     <img width="230" height="140" class="gallery__item-img" src="img/img-project/project-img-2@2x.png"
@@ -537,7 +537,7 @@
                 </p>
               </div>
               <div class="proposal__project-img">
-                <a class="proposal__project-link gallery__item-link" href="img/img-project/project-img-3@2x.png" target="_blank"
+                <a class="proposal__project-link gallery__item-link js-image-popup-link" href="img/img-project/project-img-3@2x.png" target="_blank"
                   aria-label="описание картинки" data-index="0">
                   <figure class="proposal__project-figure gallery__item">
                     <img width="230" height="140" class="gallery__item-img" src="img/img-project/project-img-3@2x.png"
@@ -1138,6 +1138,25 @@
       </button>
     </form>
   </div>
+
+  <div class="gallery-popup gallery-popup--single js-image-popup popup js-popup">
+    <div class="popup__container">
+      <div class="popup__overlay js-popup__overlay"></div>
+      <div class="gallery-popup__content popup__content">
+        <div class="popup__bar popup__bar--top">
+          <button class="popup__close-btn js-popup__close-btn" type="button">
+            <span class="visually-hidden">Закрыть</span>
+            <svg width="16" height="16">
+              <use xlink:href="img/sprite.svg#icon-cross"></use>
+            </svg>
+          </button>
+        </div>
+        <div class="gallery-popup__frame js-image-popup__frame">
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=a3b13bbc-c623-4647-90d4-48210288fe0d" type="text/javascript"></script>
   <script src="js/libs.js"></script>
   <script src="js/main.min.js"></script>
