--- a/source/improvement-list_var3-new.html
+++ b/source/improvement-list_var3-new.html
@@ -138,7 +138,7 @@
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
               <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
-                <input type="checkbox" name="checkbox" id="checkbox-1" value="checkbox-1">
+                <input class="form-checkbox-update__custom-checkbox" type="checkbox" name="checkbox" id="checkbox-1" value="checkbox-1">
                 <label for="checkbox-1"></label>
               </div>
               <!-- <div class="proposal__like-wrapper js-projects__item-link">
@@ -181,7 +181,7 @@
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
               <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
-                <input type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
+                <input class="form-checkbox-update__custom-checkbox" type="checkbox" name="checkbox" id="checkbox-2" value="checkbox-2" checked>
                 <label for="checkbox-2"></label>
               </div>
               <!-- <div class="proposal__like-wrapper js-projects__item-link">
@@ -224,7 +224,7 @@
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
               <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
-                <input type="checkbox" name="checkbox" id="checkbox-3" value="checkbox-3">
+                <input class="form-checkbox-update__custom-checkbox" type="checkbox" name="checkbox" id="checkbox-3" value="checkbox-3">
                 <label for="checkbox-3"></label>
               </div>
               <!-- <div class="proposal__like-wrapper js-projects__item-link">
@@ -267,7 +267,7 @@
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
               <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
-                <input type="checkbox" name="checkbox" id="checkbox-4" value="checkbox-4">
+                <input class="form-checkbox-update__custom-checkbox" type="checkbox" name="checkbox" id="checkbox-4" value="checkbox-4">
                 <label for="checkbox-4"></label>
               </div>
               <!-- <div class="proposal__like-wrapper js-projects__item-link">
@@ -310,7 +310,7 @@
               текст, служащий для временного наполнения макета в публикациях</a>
             <div class="proposal-list__like-counter js-like-counter proposal-list__like-counter--update">
               <div class="form-checkbox-update form-checkbox-update--grey js-projects__item-link">
-                <input type="checkbox" name="checkbox" id="checkbox-5" value="checkbox-5">
+                <input class="form-checkbox-update__custom-checkbox" type="checkbox" name="checkbox" id="checkbox-5" value="checkbox-5">
                 <label for="checkbox-5"></label>
               </div>
               <!-- <div class="proposal__like-wrapper js-projects__item-link">
