Поправляет элементы в попапе, показывает синие кнопки проголосовать на страницах и в попапе

--- a/source/proposal-6-7_var3-new.html
+++ b/source/proposal-6-7_var3-new.html
@@ -348,7 +348,7 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
             </div>
-            <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
+            <!-- <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button> -->
               <div class="proposal__project-mark">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="12" cy="12" r="11.25" stroke="#2C8ECC" stroke-width="1.5"/>
@@ -505,13 +505,13 @@
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
             </div>
             <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
-              <div class="proposal__project-mark">
+              <!-- <div class="proposal__project-mark">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="12" cy="12" r="11.25" stroke="#2C8ECC" stroke-width="1.5"/>
                   <path d="M7.19922 12.0004L11.0392 15.6004L16.7992 8.40039" stroke="#2C8ECC" stroke-width="1.5"/>
                 </svg>
                 <span>Вы выбрали данный дизайн-проект</span>
-              </div>
+              </div> -->
             <button class="proposal__project-details button-details">
               <span class="button-details__text button-details__text">Подробнее</span>
               <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -660,7 +660,7 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
             </div>
-            <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
+            <!-- <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button> -->
               <div class="proposal__project-mark">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="12" cy="12" r="11.25" stroke="#2C8ECC" stroke-width="1.5"/>
