--- a/source/improvement-list_var3-new.html
+++ b/source/improvement-list_var3-new.html
@@ -518,7 +518,7 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
             </div>
-            <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
+            <!-- <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button> -->
               <div class="proposal__project-mark">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="12" cy="12" r="11.25" stroke="#2C8ECC" stroke-width="1.5"/>
@@ -674,14 +674,14 @@
             </div>
             <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
           </div>
-          <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
-            <div class="proposal__project-mark opened">
+          <button type="button" class="button button--blue button--update opened">ПРОГОЛОСОВАТЬ</button>
+            <!-- <div class="proposal__project-mark opened">
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="12" cy="12" r="11.25" stroke="#2C8ECC" stroke-width="1.5"/>
                 <path d="M7.19922 12.0004L11.0392 15.6004L16.7992 8.40039" stroke="#2C8ECC" stroke-width="1.5"/>
               </svg>
               <span>Вы выбрали данный дизайн-проект</span>
-            </div>
+            </div> -->
             <button class="proposal__project-details button-details opened proposal__project--opened">
               <span class="button-details__text button-details__text">Свернуть</span>
               <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -830,7 +830,7 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
             </div>
-            <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button>
+            <!-- <button type="button" class="button button--blue button--update">ПРОГОЛОСОВАТЬ</button> -->
               <div class="proposal__project-mark">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="12" cy="12" r="11.25" stroke="#2C8ECC" stroke-width="1.5"/>
