--- a/source/proposal-6-7_var3-new.html
+++ b/source/proposal-6-7_var3-new.html
@@ -1070,7 +1070,7 @@
         <div class="confirmation-popup" data-modal="remove">
           <div class="confirmation-popup__body">
             <button type="button" class="confirmation-popup__close-btn" aria-label="Отмена"></button>
-            <p>После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя</p>
+            <p>После отправки предложения на модерацию внести изменения будет нельзя</p>
             <div class="confirmation-popup__buttons-wrap">
               <button type="button" class="confirmation-popup__back-btn button button--white">Вернуться</button>
               <button type="submit" class="confirmation-popup__submit-btn button button--blue">Отправить</button>
@@ -1080,7 +1080,7 @@
         <div class="confirmation-popup" data-modal="confirm">
           <div class="confirmation-popup__body">
             <button type="button" class="confirmation-popup__close-btn" aria-label="Отмена"></button>
-            <p>После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя После отправки предложения на модерацию внести изменения будет нельзя</p>
+            <p>После отправки предложения на модерацию внести изменения будет нельзя</p>
             <div class="confirmation-popup__buttons-wrap">
               <button type="button" class="confirmation-popup__back-btn button button--white">Вернуться</button>
               <button type="submit" class="confirmation-popup__submit-btn button button--blue">Отправить</button>
