фиксит пунткы ревью

--- a/source/improvement-list_var2-new.html
+++ b/source/improvement-list_var2-new.html
@@ -385,9 +385,8 @@
                     <div class="proposal__variant-wrapper">
                       <div class="form-radio">
                         <input type="radio" name="radio" id="radio-1" value="radio-1">
-                        <label for="radio-1"></label>
+                        <label class="proposal__project-title" for="radio-1">Вариант №1</label>
                       </div>
-                      <h3 class="proposal__project-title">Вариант №1</h3>
                     </div>
                     <span class="proposal__project-votes">Всего проголосовало: 504</span>
                   </div>
@@ -519,22 +518,22 @@
               </div>
 
               <div class="project__gallery-full gallery-full js-gallery-full hidden">
-                <button class="gallery-full__btn gallery-full__btn--close js-gallery-full__close-btn" type="button">
+                <button class="gallery-full__btn gallery-full__btn--close js-gallery-full-close-btn" type="button">
                   <span class="visually-hidden">Закрыть</span>
                   <svg width="16" height="16">
                     <use xlink:href="img/sprite.svg#icon-close"></use>
                   </svg>
                 </button>
 
-                <div class="js-gallery-full__frame swiper-container"></div>
+                <div class="js-gallery-full-frame swiper-container"></div>
 
-                <button class="gallery-full__btn gallery-full__btn--prev js-gallery-full__prev" type="button">
+                <button class="gallery-full__btn gallery-full__btn--prev js-gallery-full-prev" type="button">
                   <svg width="24" height="24">
                     <use xlink:href="img/sprite.svg#icon-arrow-small-left"></use>
                   </svg>
                 </button>
 
-                <button class="gallery-full__btn gallery-full__btn--next js-gallery-full__next" type="button">
+                <button class="gallery-full__btn gallery-full__btn--next js-gallery-full-next" type="button">
                   <svg width="24" height="24">
                     <use xlink:href="img/sprite.svg#icon-arrow-small-right"></use>
                   </svg>
@@ -563,9 +562,8 @@
                     <div class="proposal__variant-wrapper">
                       <div class="form-radio">
                         <input type="radio" name="radio" id="radio-2" value="radio-2" checked>
-                        <label for="radio-2"></label>
+                        <label class="proposal__project-title" for="radio-2">Вариант №2</label>
                       </div>
-                      <h3 class="proposal__project-title">Вариант №2</h3>
                     </div>
                     <span class="proposal__project-votes">Всего проголосовало: 504</span>
                   </div>
@@ -697,22 +695,22 @@
             </div>
 
             <div class="project__gallery-full gallery-full js-gallery-full hidden">
-              <button class="gallery-full__btn gallery-full__btn--close js-gallery-full__close-btn" type="button">
+              <button class="gallery-full__btn gallery-full__btn--close js-gallery-full-close-btn" type="button">
                 <span class="visually-hidden">Закрыть</span>
                 <svg width="16" height="16">
                   <use xlink:href="img/sprite.svg#icon-close"></use>
                 </svg>
               </button>
 
-              <div class="js-gallery-full__frame swiper-container"></div>
+              <div class="js-gallery-full-frame swiper-container"></div>
 
-              <button class="gallery-full__btn gallery-full__btn--prev js-gallery-full__prev" type="button">
+              <button class="gallery-full__btn gallery-full__btn--prev js-gallery-full-prev" type="button">
                 <svg width="24" height="24">
                   <use xlink:href="img/sprite.svg#icon-arrow-small-left"></use>
                 </svg>
               </button>
 
-              <button class="gallery-full__btn gallery-full__btn--next js-gallery-full__next" type="button">
+              <button class="gallery-full__btn gallery-full__btn--next js-gallery-full-next" type="button">
                 <svg width="24" height="24">
                   <use xlink:href="img/sprite.svg#icon-arrow-small-right"></use>
                 </svg>
@@ -741,9 +739,8 @@
                     <div class="proposal__variant-wrapper">
                       <div class="form-radio">
                         <input type="radio" name="radio" id="radio-3" value="radio-3">
-                        <label for="radio-3"></label>
+                        <label class="proposal__project-title" for="radio-3">Вариант №3</label>
                       </div>
-                      <h3 class="proposal__project-title">Вариант №3</h3>
                     </div>
                     <span class="proposal__project-votes">Всего проголосовало: 504</span>
                   </div>
@@ -875,22 +872,22 @@
               </div>
 
               <div class="project__gallery-full gallery-full js-gallery-full hidden">
-                <button class="gallery-full__btn gallery-full__btn--close js-gallery-full__close-btn" type="button">
+                <button class="gallery-full__btn gallery-full__btn--close js-gallery-full-close-btn" type="button">
                   <span class="visually-hidden">Закрыть</span>
                   <svg width="16" height="16">
                     <use xlink:href="img/sprite.svg#icon-close"></use>
                   </svg>
                 </button>
 
-                <div class="js-gallery-full__frame swiper-container"></div>
+                <div class="js-gallery-full-frame swiper-container"></div>
 
-                <button class="gallery-full__btn gallery-full__btn--prev js-gallery-full__prev" type="button">
+                <button class="gallery-full__btn gallery-full__btn--prev js-gallery-full-prev" type="button">
                   <svg width="24" height="24">
                     <use xlink:href="img/sprite.svg#icon-arrow-small-left"></use>
                   </svg>
                 </button>
 
-                <button class="gallery-full__btn gallery-full__btn--next js-gallery-full__next" type="button">
+                <button class="gallery-full__btn gallery-full__btn--next js-gallery-full-next" type="button">
                   <svg width="24" height="24">
                     <use xlink:href="img/sprite.svg#icon-arrow-small-right"></use>
                   </svg>
@@ -930,7 +927,7 @@
             </svg>
           </button>
         </div>
-        <div class="gallery-popup__frame js-image-popup__frame">
+        <div class="gallery-popup__frame js-image-popup-frame">
         </div>
       </div>
     </div>
