--- a/source/proposal-6-7_var2-new.html
+++ b/source/proposal-6-7_var2-new.html
@@ -200,9 +200,8 @@
                     <div class="proposal__variant-wrapper">
                       <div class="form-radio">
                         <input type="radio" name="radio" id="radio-1" value="radio-1">
-                        <label for="radio-1"></label>
+                        <label for="radio-1" class="proposal__project-title">Вариант №1</label>
                       </div>
-                      <h3 class="proposal__project-title">Вариант №1</h3>
                     </div>
                     <span class="proposal__project-votes">Всего проголосовало: 504</span>
                   </div>
@@ -354,9 +353,8 @@
                     <div class="proposal__variant-wrapper">
                       <div class="form-radio">
                         <input type="radio" name="radio" id="radio-2" value="radio-2" checked>
-                        <label for="radio-2"></label>
+                        <label class="proposal__project-title" for="radio-2">Вариант №2</label>
                       </div>
-                      <h3 class="proposal__project-title">Вариант №2</h3>
                     </div>
                     <span class="proposal__project-votes">Всего проголосовало: 504</span>
                   </div>
@@ -508,9 +506,8 @@
                     <div class="proposal__variant-wrapper">
                       <div class="form-radio">
                         <input type="radio" name="radio" id="radio-3" value="radio-3">
-                        <label for="radio-3"></label>
+                        <label class="proposal__project-title" for="radio-3">Вариант №3</label>
                       </div>
-                      <h3 class="proposal__project-title">Вариант №3</h3>
                     </div>
                     <span class="proposal__project-votes">Всего проголосовало: 504</span>
                   </div>
@@ -740,7 +737,7 @@
             </svg>
           </button>
         </div>
-        <div class="gallery-popup__frame js-image-popup__frame">
+        <div class="gallery-popup__frame js-image-popup-frame">
         </div>
       </div>
     </div>
