--- a/source/proposal-6-7_var3-new.html
+++ b/source/proposal-6-7_var3-new.html
@@ -217,9 +217,8 @@
                       <div class="proposal__variant-wrapper">
                         <div class="form-radio">
                           <input type="radio" name="radio" id="radio-1" value="radio-1">
-                          <label for="radio-1"></label>
+                          <label class="proposal__project-title" for="radio-1">Вариант №1</label>
                         </div>
-                        <h3 class="proposal__project-title">Вариант №1</h3>
                       </div>
                       <span class="proposal__project-votes">Всего проголосовало: 504</span>
                     </div>
@@ -371,9 +370,8 @@
                       <div class="proposal__variant-wrapper">
                         <div class="form-radio">
                           <input type="radio" name="radio" id="radio-2" value="radio-2" checked>
-                          <label for="radio-2"></label>
+                          <label class="proposal__project-title" for="radio-2">Вариант №2</label>
                         </div>
-                        <h3 class="proposal__project-title">Вариант №2</h3>
                       </div>
                       <span class="proposal__project-votes">Всего проголосовало: 504</span>
                     </div>
@@ -525,9 +523,8 @@
                       <div class="proposal__variant-wrapper">
                         <div class="form-radio">
                           <input type="radio" name="radio" id="radio-3" value="radio-3">
-                          <label for="radio-3"></label>
+                          <label class="proposal__project-title" for="radio-3">Вариант №3</label>
                         </div>
-                        <h3 class="proposal__project-title">Вариант №3</h3>
                       </div>
                       <span class="proposal__project-votes">Всего проголосовало: 504</span>
                     </div>
@@ -915,7 +912,7 @@
                 </div>
                 <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
               </div>
-              <button class="proposal__milestones-details button-details">
+              <button type="button" class="proposal__milestones-details button-details">
                 <span class="button-details__text">Подробнее</span>
                 <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9833 0L7 4.97297L2.01667 0L0.5 1.51351L7 8L13.5 1.51351L11.9833 0Z" fill="#2C8ECC"/>
@@ -1038,7 +1035,7 @@
                 </div>
                 <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
               </div>
-              <button class="proposal__milestones-details button-details">
+              <button type="button" class="proposal__milestones-details button-details">
                 <span class="button-details__text">Подробнее</span>
                 <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9833 0L7 4.97297L2.01667 0L0.5 1.51351L7 8L13.5 1.51351L11.9833 0Z" fill="#2C8ECC"/>
@@ -1130,7 +1127,7 @@
             </svg>
           </button>
         </div>
-        <div class="gallery-popup__frame js-image-popup__frame">
+        <div class="gallery-popup__frame js-image-popup-frame">
         </div>
       </div>
     </div>
