--- a/source/proposal-page-voting-var4.html
+++ b/source/proposal-page-voting-var4.html
@@ -328,7 +328,7 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
             </div>
-            <button class="proposal__project-details button-details">
+            <button type="button" class="proposal__project-details button-details">
               <span class="button-details__text">Подробнее</span>
               <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9833 0L7 4.97297L2.01667 0L0.5 1.51351L7 8L13.5 1.51351L11.9833 0Z" fill="#2C8ECC"/>
@@ -484,7 +484,7 @@
                 <span>Вы выбрали данный дизайн-проект</span>
               </div>
             </div>
-            <button class="proposal__project-details button-details">
+            <button type="button" class="proposal__project-details button-details">
               <span class="button-details__text button-details__text">Подробнее</span>
               <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9833 0L7 4.97297L2.01667 0L0.5 1.51351L7 8L13.5 1.51351L11.9833 0Z" fill="#2C8ECC"/>
@@ -640,7 +640,7 @@
                 <span>Вы выбрали данный дизайн-проект</span>
               </div>
             </div>
-            <button class="proposal__project-details button-details">
+            <button type="button" class="proposal__project-details button-details">
               <span class="button-details__text">Подробнее</span>
                 <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9833 0L7 4.97297L2.01667 0L0.5 1.51351L7 8L13.5 1.51351L11.9833 0Z" fill="#2C8ECC"/>
@@ -888,7 +888,7 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
             </div>
-            <button class="proposal__milestones-details button-details">
+            <button type="button" class="proposal__milestones-details button-details">
               <span class="button-details__text">Подробнее</span>
               <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9833 0L7 4.97297L2.01667 0L0.5 1.51351L7 8L13.5 1.51351L11.9833 0Z" fill="#2C8ECC"/>
@@ -1011,7 +1011,7 @@
               </div>
               <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
             </div>
-            <button class="proposal__milestones-details button-details">
+            <button type="button" class="proposal__milestones-details button-details">
               <span class="button-details__text">Подробнее</span>
               <svg class="button-details__icon" width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.9833 0L7 4.97297L2.01667 0L0.5 1.51351L7 8L13.5 1.51351L11.9833 0Z" fill="#2C8ECC"/>
