--- a/source/improvement-list_var2-new.html
+++ b/source/improvement-list_var2-new.html
@@ -519,22 +519,22 @@
                 </div>
 
                 <div class="project__gallery-full gallery-full js-gallery-full hidden">
-                  <button class="gallery-full__btn gallery-full__btn--close js-gallery-full__close-btn" type="button">
+                  <button class="gallery-full__btn gallery-full__btn--close js-gallery-full-close-btn" type="button">
                     <span class="visually-hidden">Закрыть</span>
                     <svg width="16" height="16">
                       <use xlink:href="img/sprite.svg#icon-close"></use>
                     </svg>
                   </button>
 
-                  <div class="js-gallery-full__frame swiper-container"></div>
+                  <div class="js-gallery-full-frame swiper-container"></div>
 
-                  <button class="gallery-full__btn gallery-full__btn--prev js-gallery-full__prev" type="button">
+                  <button class="gallery-full__btn gallery-full__btn--prev js-gallery-full-prev" type="button">
                     <svg width="24" height="24">
                       <use xlink:href="img/sprite.svg#icon-arrow-small-left"></use>
                     </svg>
                   </button>
 
-                  <button class="gallery-full__btn gallery-full__btn--next js-gallery-full__next" type="button">
+                  <button class="gallery-full__btn gallery-full__btn--next js-gallery-full-next" type="button">
                     <svg width="24" height="24">
                       <use xlink:href="img/sprite.svg#icon-arrow-small-right"></use>
                     </svg>
@@ -696,22 +696,22 @@
               </div>
 
               <div class="project__gallery-full gallery-full js-gallery-full hidden">
-                <button class="gallery-full__btn gallery-full__btn--close js-gallery-full__close-btn" type="button">
+                <button class="gallery-full__btn gallery-full__btn--close js-gallery-full-close-btn" type="button">
                   <span class="visually-hidden">Закрыть</span>
                   <svg width="16" height="16">
                     <use xlink:href="img/sprite.svg#icon-close"></use>
                   </svg>
                 </button>
 
-                <div class="js-gallery-full__frame swiper-container"></div>
+                <div class="js-gallery-full-frame swiper-container"></div>
 
-                <button class="gallery-full__btn gallery-full__btn--prev js-gallery-full__prev" type="button">
+                <button class="gallery-full__btn gallery-full__btn--prev js-gallery-full-prev" type="button">
                   <svg width="24" height="24">
                     <use xlink:href="img/sprite.svg#icon-arrow-small-left"></use>
                   </svg>
                 </button>
 
-                <button class="gallery-full__btn gallery-full__btn--next js-gallery-full__next" type="button">
+                <button class="gallery-full__btn gallery-full__btn--next js-gallery-full-next" type="button">
                   <svg width="24" height="24">
                     <use xlink:href="img/sprite.svg#icon-arrow-small-right"></use>
                   </svg>
@@ -873,22 +873,22 @@
                 </div>
 
                 <div class="project__gallery-full gallery-full js-gallery-full hidden">
-                  <button class="gallery-full__btn gallery-full__btn--close js-gallery-full__close-btn" type="button">
+                  <button class="gallery-full__btn gallery-full__btn--close js-gallery-full-close-btn" type="button">
                     <span class="visually-hidden">Закрыть</span>
                     <svg width="16" height="16">
                       <use xlink:href="img/sprite.svg#icon-close"></use>
                     </svg>
                   </button>
 
-                  <div class="js-gallery-full__frame swiper-container"></div>
+                  <div class="js-gallery-full-frame swiper-container"></div>
 
-                  <button class="gallery-full__btn gallery-full__btn--prev js-gallery-full__prev" type="button">
+                  <button class="gallery-full__btn gallery-full__btn--prev js-gallery-full-prev" type="button">
                     <svg width="24" height="24">
                       <use xlink:href="img/sprite.svg#icon-arrow-small-left"></use>
                     </svg>
                   </button>
 
-                  <button class="gallery-full__btn gallery-full__btn--next js-gallery-full__next" type="button">
+                  <button class="gallery-full__btn gallery-full__btn--next js-gallery-full-next" type="button">
                     <svg width="24" height="24">
                       <use xlink:href="img/sprite.svg#icon-arrow-small-right"></use>
                     </svg>
