--- a/source/improvement-list_var2-new.html
+++ b/source/improvement-list_var2-new.html
@@ -929,7 +929,7 @@
             </svg>
           </button>
         </div>
-        <div class="gallery-popup__frame js-image-popup__frame">
+        <div class="gallery-popup__frame js-image-popup-frame">
         </div>
       </div>
     </div>
