правки по баглисту

--- a/source/composite-poll-result.html
+++ b/source/composite-poll-result.html
@@ -20,6 +20,44 @@
           <p class="composite-poll__description">Здесь будет описание опроса (информация из стандартного поля). Рыбным текстом называется текст для временного наполнения макета в публикациях или производстве веб-сайтов, пока финальный текст еще не создан. Рыбный текст известен как текст-заполнитель.</p>
           <section class="poll-result">
             <h2 class="visually-hidden">Результаты опроса</h2>
+            <div class="form__section">
+              <p class="form__question">Выберите на ваш взгляд наиболее подходящий дизайн парковой зоны?</p>
+              <ul class="cards-list project-page__cards-list">
+                <li class="cards-list__item">
+                  <div class="preview-input preview-input--no-content">
+                    <div class="preview-input__image-wrapper project-page__cards-image-wrapper">
+                      <img class="project-page__cards-image" width="220" height="154" src="img/inputs-previews/input-6.jpg" alt="Превью для карточки">
+                    </div>
+                    <div class="cards-list__result">
+                      <span><b>122</b> (20%)</span>
+                    </div>
+                    <include src="source/components/zoom-button.html"></include>
+                  </div>
+                </li>
+                <li class="cards-list__item">
+                  <div class="preview-input preview-input--no-content">
+                    <div class="preview-input__image-wrapper project-page__cards-image-wrapper">
+                      <img class="project-page__cards-image" width="220" height="154" src="img/inputs-previews/input-7.jpg" alt="Превью для карточки">
+                    </div>
+                    <div class="cards-list__result">
+                      <span><b>140</b> (10%)</span>
+                    </div>
+                    <include src="source/components/zoom-button.html"></include>
+                  </div>
+                </li>
+                <li class="cards-list__item">
+                  <div class="preview-input preview-input--no-content">
+                    <div class="preview-input__image-wrapper project-page__cards-image-wrapper">
+                      <img class="project-page__cards-image" width="220" height="154" src="img/inputs-previews/input-8.jpg" alt="Превью для карточки">
+                    </div>
+                    <div class="cards-list__result">
+                      <span><b>318</b> (80%)</span>
+                    </div>
+                    <include src="source/components/zoom-button.html"></include>
+                  </div>
+                </li>
+              </ul>
+            </div>
             <div class="poll-result__section">
               <p class="poll-result__question">Удовлетворены ли Вы качеством предоставления государственных и муниципальных услуг в настоящее время?</p>
               <div class="poll-result__item">
@@ -203,6 +241,44 @@
                 <div class="poll-result__fill" style="width: 10%;"></div>
               </div>
             </div>
+            <div class="form__section">
+              <p class="form__question">Выберите на ваш взгляд наиболее подходящий дизайн парковой зоны?</p>
+              <ul class="cards-list project-page__cards-list">
+                <li class="cards-list__item">
+                  <div class="preview-input preview-input--no-content">
+                    <div class="preview-input__image-wrapper project-page__cards-image-wrapper">
+                      <img class="project-page__cards-image" width="220" height="154" src="img/inputs-previews/input-6.jpg" alt="Превью для карточки">
+                    </div>
+                    <div class="cards-list__result">
+                      <span><b>122</b> (20%)</span>
+                    </div>
+                    <include src="source/components/zoom-button.html"></include>
+                  </div>
+                </li>
+                <li class="cards-list__item">
+                  <div class="preview-input preview-input--no-content">
+                    <div class="preview-input__image-wrapper project-page__cards-image-wrapper">
+                      <img class="project-page__cards-image" width="220" height="154" src="img/inputs-previews/input-7.jpg" alt="Превью для карточки">
+                    </div>
+                    <div class="cards-list__result">
+                      <span><b>140</b> (10%)</span>
+                    </div>
+                    <include src="source/components/zoom-button.html"></include>
+                  </div>
+                </li>
+                <li class="cards-list__item">
+                  <div class="preview-input preview-input--no-content">
+                    <div class="preview-input__image-wrapper project-page__cards-image-wrapper">
+                      <img class="project-page__cards-image" width="220" height="154" src="img/inputs-previews/input-8.jpg" alt="Превью для карточки">
+                    </div>
+                    <div class="cards-list__result">
+                      <span><b>318</b> (80%)</span>
+                    </div>
+                    <include src="source/components/zoom-button.html"></include>
+                  </div>
+                </li>
+              </ul>
+            </div>
             <div class="poll-result__section">
               <p class="poll-result__question">Обращались ли в течение последнего года в орган государственной власти для получения государственных (муниципальных) услуг?</p>
               <div class="poll-result__item">
@@ -341,6 +417,67 @@
                 <div class="poll-result__fill" style="width: 0%;"></div>
               </div>
             </div>
+            <div class="form__section">
+              <p class="form__question">Какие варианты прогулочной зоны вам нравятся больше?</p>
+              <p class="form__description">Выберите один или несколько вариантов ответа</p>
+              <ul class="cards-list project-page__cards-list">
+                <li class="cards-list__item">
+                  <div class="preview-input preview-input--no-content">
+                    <div class="preview-input__image-wrapper project-page__cards-image-wrapper">
+                      <img class="project-page__cards-image" width="220" height="154" src="img/inputs-previews/input-6.jpg" alt="Превью для карточки">
+                    </div>
+                    <div class="cards-list__result">
+                      <span><b>125</b> (0%)</span>
+                    </div>
+                    <include src="source/components/zoom-button.html"></include>
+                  </div>
+                </li>
+                <li class="cards-list__item">
+                  <div class="preview-input preview-input--no-content">
+                    <div class="preview-input__image-wrapper project-page__cards-image-wrapper">
+                      <img class="project-page__cards-image" width="220" height="154" src="img/inputs-previews/input-7.jpg" alt="Превью для карточки">
+                    </div>
+                    <div class="cards-list__result">
+                      <span><b>125</b> (30%)</span>
+                    </div>
+                    <include src="source/components/zoom-button.html"></include>
+                  </div>
+                </li>
+                <li class="cards-list__item">
+                  <div class="preview-input preview-input--no-content">
+                    <div class="preview-input__image-wrapper project-page__cards-image-wrapper">
+                      <img class="project-page__cards-image" width="220" height="154" src="img/inputs-previews/input-8.jpg" alt="Превью для карточки">
+                    </div>
+                    <div class="cards-list__result">
+                      <span><b>180</b> (50%)</span>
+                    </div>
+                    <include src="source/components/zoom-button.html"></include>
+                  </div>
+                </li>
+                <li class="cards-list__item">
+                  <div class="preview-input preview-input--no-content">
+                    <div class="preview-input__image-wrapper project-page__cards-image-wrapper">
+                      <img class="project-page__cards-image" width="220" height="154" src="img/inputs-previews/input-9.jpg" alt="Превью для карточки">
+                    </div>
+                    <div class="cards-list__result">
+                      <span><b>90</b> (10%)</span>
+                    </div>
+                    <include src="source/components/zoom-button.html"></include>
+                  </div>
+                </li>
+                <li class="cards-list__item">
+                  <div class="preview-input preview-input--no-content">
+                    <div class="preview-input__image-wrapper project-page__cards-image-wrapper">
+                      <img class="project-page__cards-image" width="220" height="154" src="img/inputs-previews/input-10.jpg" alt="Превью для карточки">
+                    </div>
+                    <div class="cards-list__result">
+                      <span><b>125</b> (10%)</span>
+                    </div>
+                    <include src="source/components/zoom-button.html"></include>
+                  </div>
+                </li>
+              </ul>
+            </div>
           </section>
           <div class="composite-poll__button-wrapper">
             <a href="#" class="button button--light-blue composite-poll__button">
@@ -351,9 +488,59 @@
       </section>
     </main>
 
+    <div class="gallery-popup js-gallery-popup popup js-popup js-popup--gallery-single">
+      <div class="popup__container">
+        <div class="popup__overlay js-popup__overlay"></div>
+
+        <div class="gallery-popup__content popup__content">
+          <div class="popup__bar popup__bar--top">
+            <button class="popup__close-btn js-popup__close-btn" type="button">
+              <span class="visually-hidden">Закрыть</span>
+              <svg width="16" height="16">
+                <use xlink:href="img/sprite.svg#icon-cross"></use>
+              </svg>
+            </button>
+          </div>
+
+          <div
+            class="gallery-popup__frame js-gallery-popup__frame swiper-container">
+          </div>
+
+          <p
+            class="gallery-popup__photo-description js-gallery-popup__photo-description">
+          </p>
+
+          <div class="popup__bar popup__bar--bottom">
+            <button
+              class="gallery-popup__nav-btn gallery-popup__nav-btn--prev js-gallery-popup__nav-btn--prev"
+              type="button">
+              <svg width="24" height="24">
+                <use xlink:href="img/sprite.svg#icon-paginator-prev"></use>
+              </svg>
+            </button>
+
+            <p class="gallery-popup__counter">
+            <span
+              class="gallery-popup__counter-current js-gallery-popup__counter-current"></span>/<span
+              class="gallery-popup__counter-total js-gallery-popup__counter-total"></span>
+            </p>
+
+            <button
+              class="gallery-popup__nav-btn gallery-popup__nav-btn--next js-gallery-popup__nav-btn--next"
+              type="button">
+              <svg width="24" height="24">
+                <use xlink:href="img/sprite.svg#icon-paginator-next"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <include src="source/components/footer.html"></include>
     <include src="source/components/cookie.html"></include>
     <include src="source/components/up-btn.html"></include>
+    <include src="source/components/gallery-popup.html"></include>
 
     <script src="js/libs.js"></script>
     <script src="js/main.min.js"></script>
