Some console error fixes

--- a/source/composite-poll.html
+++ b/source/composite-poll.html
@@ -514,7 +514,7 @@
   <include src="source/components/gallery-popup.html"></include>
 
   <script src="js/libs.js"></script>
-  <script src="js/main.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
