--- a/source/service-unavailable-separated.html
+++ b/source/service-unavailable-separated.html
@@ -2966,7 +2966,7 @@
       };
 
 
-      window.const = {
+      window.var  = {
         keyCode: KeyCode,
         resolution: Resolution
       };
@@ -3788,7 +3788,7 @@
 
       var adjustMenuHeight = function () {
         menu.style.height = header.classList.contains('page-header--open-menu') && document.documentElement
-          .clientWidth < window.const.resolution.DESKTOP ? window.innerHeight - topBar.offsetHeight + 'px' : '';
+          .clientWidth < window.var.resolution.DESKTOP ? window.innerHeight - topBar.offsetHeight + 'px' : '';
       };
 
 
@@ -4223,7 +4223,7 @@
 
 
       var adjustHeaderAppearance = function () {
-        if (document.documentElement.clientWidth >= window.const.resolution.DESKTOP && window.pageYOffset > 0) {
+        if (document.documentElement.clientWidth >= window.var.resolution.DESKTOP && window.pageYOffset > 0) {
           header.classList.add('page-header--above-content');
           header.style.top = -headerBar.offsetHeight + 'px';
         } else {
@@ -4277,7 +4277,7 @@
       };
 
       var onEscPress = function (evt, popup) {
-        if (evt.keyCode === window.const.keyCode.ESC && popup.classList.contains('popup--shown')) {
+        if (evt.keyCode === window.var.keyCode.ESC && popup.classList.contains('popup--shown')) {
           evt.preventDefault();
 
           closePopup(popup);
@@ -4412,7 +4412,7 @@
         if (windowWidth !== document.documentElement.clientWidth) {
           windowWidth = document.documentElement.clientWidth;
 
-          if (windowWidth < window.const.resolution.TABLET) {
+          if (windowWidth < window.var.resolution.TABLET) {
             if (isInitialized) {
               return;
             }
@@ -4425,7 +4425,7 @@
       };
 
 
-      if (windowWidth < window.const.resolution.TABLET) {
+      if (windowWidth < window.var.resolution.TABLET) {
         init();
       }
 
@@ -4954,7 +4954,7 @@
             evt.preventDefault();
             popup.classList.remove(hideClass);
 
-            if (root.clientWidth < window.const.resolution.DESKTOP) {
+            if (root.clientWidth < window.var.resolution.DESKTOP) {
               window.bodyScrollLock.disableBodyScroll(popup);
             }
           });
@@ -4963,17 +4963,17 @@
         popupCloseBtn.addEventListener('click', function () {
           popup.classList.add(hideClass);
 
-          if (root.clientWidth < window.const.resolution.DESKTOP) {
+          if (root.clientWidth < window.var.resolution.DESKTOP) {
             window.bodyScrollLock.enableBodyScroll(popup);
           }
         });
 
         window.addEventListener('keydown', function (evt) {
-          if (evt.keyCode === window.const.keyCode.ESC) {
+          if (evt.keyCode === window.var.keyCode.ESC) {
             evt.preventDefault();
             popup.classList.add(hideClass);
 
-            if (root.clientWidth < window.const.resolution.DESKTOP) {
+            if (root.clientWidth < window.var.resolution.DESKTOP) {
               window.bodyScrollLock.enableBodyScroll(popup);
             }
           }
@@ -5117,7 +5117,7 @@
 
       var posX = tab.offsetLeft;
 
-      if (windowWidth < window.const.resolution.TABLET) {
+      if (windowWidth < window.var.resolution.TABLET) {
         tabList.scrollLeft = posX - 16;
       }
 
@@ -5321,7 +5321,7 @@
       overlay.addEventListener('click', closeDropdown);
 
       document.addEventListener('keydown', function (evt) {
-        if (evt.keyCode === window.const.keyCode.ESC && overlay.classList.contains('user-menu__overlay--shown')) {
+        if (evt.keyCode === window.var.keyCode.ESC && overlay.classList.contains('user-menu__overlay--shown')) {
           evt.preventDefault();
 
           closeDropdown();
